Bug fixes and improvements - select the dragged element after it's being dropped - double click to expand/collapse folders - use modal views instead of native browser prompts (no css styles yet) - bug fix: after renaming a file, the entry keeping track of current file should be updated

--- a/app/styles/less/file-browser.less
+++ b/app/styles/less/file-browser.less
@@ -141,6 +141,10 @@
         cursor: copy !important;
       }
 
+      /* Patch for embedded designer */
+      [ng-click] {
+        cursor: inherit;
+      }
     }
   }
 }
@@ -201,8 +205,8 @@ div[role=raml-editor].light {
       }
     }
   }
+}
 
-  .angular-ui-tree-drag {
-    color: #444;
-  }
+.drag-light {
+  color: #444;
 }
